# BeautyMaker

./: .gitignore  AGENTS.md  AI_COLLABORATION.md  CONTRIBUTING.md  QUICKSTART.md  README.md  openapi.yaml  pyproject.toml  test_integration.md  test_openrouter_providers.py  项目完整文档.md
config/: config.yaml  default.py
doc/: COMPARATIVE_REVIEW_FEATURE.md  DalleAPI.md  OpenRouter.md  PIPELINE_GUIDE.md  PROJECT_NOTES.md  doubao-seed-1-6.md  qwenAPI.md  seedreamAPI.md  wanAPI.md  美学规则.md  项目完整文档.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
gateway/: __init__.py  data.py  main.py  orchestrator.py  schemas.py
infra/: docker-compose.yml
infra/dockerfiles/: gateway.Dockerfile
prompts/: doubao_aesthetic.prompt
services/: __init__.py
services/common/: models.py
services/enhancer/: __init__.py  service.py
services/generate/: __init__.py  models.py  service.py
services/pipeline/: __init__.py  aesthetic_feedback.py  image2image.py  prompt_bank_cn.json  prompt_bank_cn.py  text2image.py
services/proxy/: proxy_base.py
services/reviewer/: __init__.py  service.py
services/scoring/: __init__.py  aggregator.py  base.py  utils.py
services/selector/: service.py
services/tools/: segmentation.py
tests/: Qwen_test.py  __init__.py  debug_serial.py  manual_test_reference.py  test_doubao_aesthetic_client.py  test_doubao_seedream_batch.py  test_generate_endpoint.py  test_image2image_pipeline.py  test_module_1.py  test_module_4.py  test_pipeline_endpoint.py  test_text2image_with_reference.py
(+74 files in other folders)
